# yata

./: .doppler.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .terraformignore  README.md  devbox.json  openapi.json  process-compose.yaml
.github/: renovate.json
.github/workflows/: ci.yml  deploy-backend.yml
backend/: .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_user_id_to_items.py  b615b4dd700c_create_items_table.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: item.py
backend/app/routers/: items.py
backend/app/schemas/: __init__.py  item.py
backend/app/scripts/: dump_openapi.py
backend/tests/: conftest.py  test_items.py
e2e/: global-setup.ts  package.json  playwright.config.ts  pnpm-lock.yaml
e2e/tests/: auth.setup.ts  example.spec.ts  items.spec.ts
frontend/: .prettierignore  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: proxy.ts
frontend/src/app/: actions.ts  item-form.tsx  page.tsx
frontend/src/lib/: api-types.ts  api.ts  auth0.ts  env.ts
scripts/: check-types.sh  devbox-init.sh
terraform/: .gitignore  .terraform.lock.hcl  README.md  doppler.tf  fly.tf  locals.tf  neon.tf  outputs.tf  providers.tf  variables.tf  vercel.tf  versions.tf
